--- a/home.html
+++ b/home.html
@@ -89,9 +89,13 @@
             <section class="character-showcase" id="moments">
                 <div class="character-card">
                     <div class="character-info">
-                        <h2 class="character-name">Uyên</h2>
-                        <div class="character-stars">⭐⭐⭐⭐⭐</div>
-                        <p class="character-description">A precious friend in this vast world, bringing joy and warmth to those around her...</p>
+                        <h2 class="character-name">Huỳnh Lê Kim Uyên</h2>
+                        <!-- <div class="character-stars">⭐⭐⭐⭐⭐</div> -->
+                        <p class="character-description">Một cô gái xinh đẹp, đễ thương, đôi lúc trẻ con nhưng lại rất trưởng thành và mạnh mẽ.
+                            <br>Uyên là một cô gái rất đặc biệt. Cô ấy luôn biết cách làm cho mọi người xung quanh cảm thấy vui vẻ và hạnh phúc. 
+                            Uyên có một trái tim ấm áp và luôn sẵn sàng giúp đỡ người khác. Cô ấy là một người bạn tuyệt vời và là một người yêu lý tưởng. 
+                            Uyên xứng đáng nhận được tất cả những điều tốt đẹp nhất trong cuộc sống này.
+                        </p>
                     </div>
                     <div class="character-preview">
                         <img src="assets/images/moment1.jpg" alt="Character Preview" class="character-image">
@@ -99,19 +103,19 @@
                     <div class="character-tabs">
                         <div class="tab-button active" data-image="assets/images/moment1.jpg">
                             <img src="assets/images/moment1.jpg" alt="Uyên">
-                            <span>Uyên</span>
+                            <span>Ngây ngô</span>
                         </div>
                         <div class="tab-button" data-image="assets/images/moment2.jpg">
                             <img src="assets/images/moment2.jpg" alt="Uyên">
-                            <span>Uyên</span>
+                            <span>Duyên dáng</span>
                         </div>
                         <div class="tab-button" data-image="assets/images/moment3.jpg">
                             <img src="assets/images/moment3.jpg" alt="Uyên">
-                            <span>Uyên</span>
+                            <span>Điệu đà</span>
                         </div>
                         <div class="tab-button" data-image="assets/images/moment4.jpg">
                             <img src="assets/images/moment4.jpg" alt="Uyên">
-                            <span>Uyên</span>
+                            <span>Cuốn Hút</span>
                         </div>
                     </div>
                 </div>
@@ -134,18 +138,25 @@
                         <div class="wish-card" data-aos="zoom-in" data-aos-delay="200">
                             <p>Chúc em công việc ổn định</p>
                         </div>
+                        <div class="wish-card" data-aos="zoom-in" data-aos-delay="300">
+                            <p>Chúc em luôn được yêu thương và trân trọng</p>
+                        </div>
+                        <div class="wish-card" data-aos="zoom-in" data-aos-delay="400">
+                            <p>Chúc em có nhiều kỷ niệm đẹp trong cuộc sống</p>
+                        </div>
+
                     </div>
                 </div>
             </section>
 
             <!-- Regions Section -->
             <section class="regions-section">
-                <h2 class="section-title golden-text">Kỷ niệm</h2>
+                <h2 class="section-title golden-text">Lời nhắn nhủ qua tuổi mới</h2>
                 <div class="regions-slider">
-                    <div class="region-card active" style="background-image: url('assets/images/region1.jpg')">
+                    <div class="region-card active" style="background-image: url('assets/images/region2.jpg');" data-aos="fade-up">
                         <div class="region-info">
-                            <h3 class="region-name">Kỷ niệm vui vẻ</h3>
-                            <p class="region-description">Những khoảnh khắc đáng nhớ của Uyên trong năm qua</p>
+                            <h3 class="region-name">Bài học về tuổi mới</h3>
+                            <p class="region-description">Em đã đi qua chặng đường học vấn này rất gian nan và vất vả, mong rằng em vẫn sẽ là chính em trên hành trang trở thành một người theo đuổi giấc mơ của bản thân</p>
                         </div>
                     </div>
                 </div>
@@ -153,7 +164,7 @@
 
             <!-- More Info Section -->
             <section class="more-info-section">
-                <h2 class="section-title golden-text">Xinh gái</h2>
+                <h2 class="section-title golden-text">Khoe ảnh xinh gái</h2>
                 <div class="swiper-container info-slider">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
@@ -174,6 +185,26 @@
                         <div class="swiper-slide">
                             <div class="info-card">
                                 <img src="assets/images/moment4.jpg" alt="Khoảnh khắc 4">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="info-card">
+                                <img src="assets/images/moment5.jpg" alt="Khoảnh khắc 4">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="info-card">
+                                <img src="assets/images/moment6.jpg" alt="Khoảnh khắc 4">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="info-card">
+                                <img src="assets/images/moment7.jpg" alt="Khoảnh khắc 4">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="info-card">
+                                <img src="assets/images/moment8.jpg" alt="Khoảnh khắc 4">
                             </div>
                         </div>
                     </div>
