Update gallery title text for improved emotional connection

--- a/gallery.html
+++ b/gallery.html
@@ -52,7 +52,7 @@
     <div id="main-content">
         <div class="gallery-page">
             <div class="header">
-                <h1 class="gallery-title" data-aos="fade-down">✨ Khoảnh khắc đáng yêu của Uyên ✨</h1>
+                <h1 class="gallery-title" data-aos="fade-down">✨Đây là nơi anh lưu lại những kỷ niệm✨</h1>
                 <div class="title-decoration" data-aos="fade-up">
                     <div class="line"></div>
                     <span class="star">⭐</span>
