Enhance character description formatting and improve layout responsiveness for better user experience

--- a/home.html
+++ b/home.html
@@ -90,11 +90,13 @@
                 <div class="character-card">
                     <div class="character-info">
                         <h2 class="character-name">Huỳnh Lê Kim Uyên</h2>
-                        <!-- <div class="character-stars">⭐⭐⭐⭐⭐</div> -->
-                        <p class="character-description">Một cô gái xinh đẹp, đễ thương, đôi lúc trẻ con nhưng lại rất trưởng thành và mạnh mẽ.
-                            <br>Uyên là một cô gái rất đặc biệt. Cô ấy luôn biết cách làm cho mọi người xung quanh cảm thấy vui vẻ và hạnh phúc. 
-                            Uyên có một trái tim ấm áp và luôn sẵn sàng giúp đỡ người khác. Cô ấy là một người bạn tuyệt vời và là một người yêu lý tưởng. 
-                            Uyên xứng đáng nhận được tất cả những điều tốt đẹp nhất trong cuộc sống này.
+                        <p class="character-description">
+                            Một cô gái xinh đẹp, đễ thương, đôi lúc trẻ con nhưng lại rất trưởng thành và mạnh mẽ.
+                            <br><br>
+                            Uyên là một cô gái rất đặc biệt. Cô ấy luôn biết cách làm cho mọi người xung quanh cảm thấy vui vẻ và hạnh phúc. 
+                            Uyên có một trái tim ấm áp và luôn sẵn sàng giúp đỡ người khác.
+                            <br><br>
+                            Cô ấy là một người bạn tuyệt vời và là một người yêu lý tưởng. Uyên xứng đáng nhận được tất cả những điều tốt đẹp nhất trong cuộc sống này.
                         </p>
                     </div>
                     <div class="character-preview">
